--- a/html/GmailInbox/index.html
+++ b/html/GmailInbox/index.html
@@ -19,10 +19,9 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="read">
+            <tr class="unread">
                 <td>
                     <div class="inbox-actions">
-                       
                         <div class="inbox-checkbox">
                             <input type="checkbox" id="inbox-1" />
                             <label for="inbox-1" class="sr-only">Select this email</label>
@@ -51,9 +50,10 @@
                     3:34 PM
                 </td>
             </tr>
+
             <tr class="read">
                 <td>
-                    <div>
+                    <div class="inbox-actions"> 
                         <div class="inbox-checkbox">
                             <input type="checkbox" id="inbox-1" />
                             <label for="inbox-1" class="sr-only">Select this email</label>
@@ -83,6 +83,7 @@
             </tr>
         </tbody>
     </table>
+    <script src="./app.js"></script>
 </body>
 
 </html>
