--- a/HtmlStructure/article05/article05.html
+++ b/HtmlStructure/article05/article05.html
@@ -14,38 +14,133 @@
         </h1>
         <header>
             <a href="#">
-                <img src="#" alt="김익명" />
+                <img src="#" alt="김익명">
             </a>
-            <h2>
+            <strong>
                 <a href="#">
                     김익명
                 </a>
-            </h2>
+            </strong>
+
             <dl>
                 <div>
                     <dt>Username</dt>
-                    <dd>@anonymouskim</dd>
+                    <dd>
+                        <a href="#">
+                            @anonymouskim
+                        </a>
+                    </dd>
+                </div>
+                <div>
+                    <dt>Posted</dt>
+                    <dd>
+                        <a href="#">
+                            Dec 25
+                        </a>
+                    </dd>
                 </div>
             </dl>
+            <button type="button" aria-label="Options">
+                <!-- Icon -->
+            </button>
+            <div>
+                <button type="button">
+                    <!-- Icon -->
+                    Show less often
+                </button>
+                <button type="button">
+                    <!-- Icon -->
+                    Embed Tweet
+                </button>
+                <button type="button">
+                    <!-- Icon -->
+                    Unfollow @anonymouskim
+                </button>
+                <button type="button">
+                    <!-- Icon -->
+                    Mute @anonymouskim
+                </button>
+                <button type="button">
+                    <!-- Icon -->
+                    Block @anonymouskim
+                </button>
+                <button type="button">
+                    <!-- Icon -->
+                    Report Tweet
+                </button>
+            </div>
         </header>
+        <p>
+            영어를 더 잘 하고싶다. 그러나 공부를 하고 싶지는 않다. 내 삶의 모든 것이 이런 식으로 망해왔다
+        </p>
     </article>
+    <footer>
+        <button type="button">
+            <span class="sr-only">
+                Tweet your reply
+            </span>
+            <strong aria-label="3 replied">
+                3
+            </strong>
+        </button>
+
+        <button type="button">
+            <span class="sr-only">
+                Retweet
+            </span>
+            <strong aria-label="3 Retweeted">
+                3
+            </strong>
+        </button>
+        <div>
+            <button type="button">
+                Retweet
+            </button>
+
+            <button type="button">  
+                Retweet with comment
+            </button>
+        </div>
+
+        <button type="button">
+            <span class="sr-only">
+                Like this tweet
+            </span>
+            <strong aria-label="100 liked"> 
+                100
+            </strong>
+        </button>
+
+        <button type="button">
+            <span class="sr-only">
+                Share
+            </span>
+        </button>
+        
+        <div>
+            <button type="button">
+                Send via Direct Message
+            </button>
+            <button type="button">
+                Add Tweet to Bookmarks
+            </button>
+            <button type="button">
+                Copy link to Tweet
+            </button>
+        </div>
+    </footer>
 
 </body>
 
 
-영어를 더 잘 하고싶다. 그러나 공부를 하고 싶지는 않다. 내 삶의 모든 것이 이런 식으로 망해왔다
 
-Show less often
-Embed Tweet
-Unfollow @anonymouskim
-Mute @anonymouskim
-Block @anonymouskim
-Report Tweet
 
-Retweet
-Retweet with comment
 
-Send via Direct Message
-Add Tweet to Bookmarks
-Copy link to Tweet
+
+
+
+
+
+
+
 </html>
