--- a/css/flexbox1/index2.html
+++ b/css/flexbox1/index2.html
@@ -11,8 +11,9 @@
         <div class="child red">Child</div>
         <div class="child yellow">Child</div>
         <div class="child blue">Child</div>
+        <div class="clear"></div>
     </div>
-    <!-- <div class="other">
+    <div class="other">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Vero fugiat minus et tenetur, suscipit adipisci eaque nam iusto molestias ea
          labore dolor nesciunt amet dolore deleniti tempora cumque assumenda, 
@@ -43,6 +44,6 @@
                   error laudantium excepturi. Necessitatibus iusto optio earum quia. Architecto et o
                   fficiis culpa dolore dolorem ipsum distinctio, 
             illo porro fuga molestiae praesentium impedit optio deserunt!
-    </div> -->
+    </div>
 </body>
 </html>
