--- a/css/background/index.html
+++ b/css/background/index.html
@@ -11,7 +11,8 @@
   <body>
     <article class="card">
       <div class="card-image">
-          <button type="button" class="like-button" aria-label="Like this property"></button> 
+          <!--img -->
+          <button type="button" class="like-button" aria-label="Like this property"></button>
       </div>
       <div class="card-content">
         <header class="card-header">
@@ -19,7 +20,6 @@
             <strong class="plus-badge">Plus</strong>
             <span>Entire apartment</span>
           </div>
-
           <div class="property-rate">
             <strong aria-label="Review: 4.97">
               4.97
