--- a/Project/index.html
+++ b/Project/index.html
@@ -104,23 +104,23 @@
 
   <section class="curriculum section">
     <div class="container">
-        <div class="row align-items-center">
-          <div class="col-12 col-md-6">
-            <strong class="section-category">Curriculum</strong>
-            <h1 class="section-title">
-              Dive into the web development
-            </h1>
-            <p class="section-desc">
-              Dive into the software development environment and the basics of computing, networks, and data structures.
-            </p>
-            <a href="#" class="fill-button">Apply now</a>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="curriculum-image">
-              <img src=" ./assets/img-curriculum.png" alt="curriculum-image" />
-            </div>
+      <div class="row align-items-center">
+        <div class="col-12 col-md-6">
+          <strong class="section-category">Curriculum</strong>
+          <h1 class="section-title">
+            Dive into the web development
+          </h1>
+          <p class="section-desc">
+            Dive into the software development environment and the basics of computing, networks, and data structures.
+          </p>
+          <a href="#" class="fill-button">Apply now</a>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="curriculum-image">
+            <img src=" ./assets/img-curriculum.png" alt="curriculum-image" />
           </div>
         </div>
+      </div>
 
       <div class="row">
         <div class="col-12 col-md-6">
@@ -140,6 +140,37 @@
       </div>
     </div>
   </section>
+
+  <section class="subscription section">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-12 col-md-5">
+          <div class="subscription-img">
+            이미지
+          </div>
+        </div>  
+
+        <div class="col-12 col-md-7">
+          <h1>
+            Stay with us
+          </h1>
+          <p>
+            Subscribe to our email newsletter to stay up to date on the latest updates
+          </p>
+          <form action="" method="">
+            <div>
+              <input type="email" placeholder="" />
+              <button type="submit">aaas</button>
+            </div>
+            <p>Cancel any time. Check out Terms of Use.</p>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
 </body>
 
 </html>
