--- a/css/Test3/index.html
+++ b/css/Test3/index.html
@@ -2,21 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./grid.min.css">
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./grid.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <a href="#"> abc</a>
-                <a href="#"> abc</a>
-            </div>
-        </div>
+  <div class="container"> 
+    <div class="row">
+      <div class="col-12 col-md-2">
+        <header>
+        <p>aa</p>
+        <p>aa</p>
+        <input type="text">
+      </header>
+      </div>
+
+
+      <div class="col-12 col-md-7">
+
+        <h1>7</h1>
+        <h1>7</h1>
+
+
+
+      </div>
+      
+      <div class="col-12 col-md-3">
+        <h1>3</h1>
+
+
+      </div>
     </div>
+  </div>
+
+
+
 </body>
 
 </html>
