--- a/Project/index.html
+++ b/Project/index.html
@@ -141,36 +141,38 @@
     </div>
   </section>
 
-  <section class="subscription section">
+  <aside class="subscription">
     <div class="container">
-
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-12 col-md-5">
-          <div class="subscription-img">
-            이미지
+          <div class="subscription-image">
+            <img src="assets/img-banner.png" alt="subscription-image">
           </div>
-        </div>  
+        </div>
 
         <div class="col-12 col-md-7">
-          <h1>
-            Stay with us
-          </h1>
-          <p>
+          <h1 class="subscription-title">Stay with us</h1>
+          <p class="subscription-desc">
             Subscribe to our email newsletter to stay up to date on the latest updates
           </p>
-          <form action="" method="">
-            <div>
-              <input type="email" placeholder="" />
-              <button type="submit">aaas</button>
+          <form action="#" method="POST" class="subscription-form">
+            <div class="input-group">
+              <input type="email" placeholder="Enter your email" />
+              <button type="submit" class="fill-button">
+                Get started
+              </button>
             </div>
-            <p>Cancel any time. Check out Terms of Use.</p>
+            <p class="form-notice">
+              Cancel any time. Check out
+              <a href="#">
+                Terms of Use.
+              </a>
+            </p>
           </form>
         </div>
       </div>
     </div>
-
-  </section>
-
+  </aside>
 </body>
 
 </html>
