--- a/HtmlStructure/08/index.html
+++ b/HtmlStructure/08/index.html
@@ -68,7 +68,7 @@
                         <!-- #아이콘 -->
                         More
                     </button>
-                    <div class=" Dropdown-Menu">
+                    <div class="Dropdown-Menu">
                         <!-- DROPDOWN MENU -->
 
                     </div>
@@ -87,7 +87,7 @@
                 <!-- Icon -->
             </button>
 
-            <div>
+            <div>   
                 <h2>Home shows you top Tweets first</h2>
                 <button type="button">
                     <!-- Icon -->
@@ -110,7 +110,7 @@
                 <button type="button" aria-label="Upload files">
                     <!-- Icon -->
                 </button>
-                <input type="file" multiple accept="image/*,video/*" />
+                <input type="file" multiple accept="image/*,video/*"/>
                 <button type="button" aria-label="Search GIFs...">
                     <!-- Icon -->
                 </button>
@@ -121,7 +121,7 @@
                     <!-- Icon -->
                 </button>
                 <storng aria-label="0 out of 280 characters">
-
+                    <!-- Icon -->
                 </storng>
                 <button type="button" aria-label="Add anothor tweet">
                     <!-- Icon -->
