--- a/html/Paging/index.html
+++ b/html/Paging/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <!-- <div class="breadcrumb">
+    <div class="breadcrumb">
         <a href="https://github.com/rohjs">rohjs</a>
         <a href="https://github.com/park002/bugless-101">bugless-101</a>
-    </div> -->
+    </div>
 
     <div class="pagination">
         <a href="#" aria-label="Go to previous page" class="disabled">Previous</a>
@@ -48,7 +48,6 @@
             <li>
                 <a href="#" aria-label="Go to page 9">9</a>
             </li>
-
         </ol>
         <a href="#" aria-label="Go to next page">Next</a>
     </div>
